--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "eslint-visitor-keys": "^1.0.0",
     "espree": "^4.0.0-rc.0",
     "esquery": "^1.0.1",
+    "eslint-plugin-babel": "^4.1.0",
+    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-react-native": "^2.2.1",
     "esutils": "^2.0.2",
     "file-entry-cache": "^2.0.0",
     "functional-red-black-tree": "^1.0.1",
