--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "cross-spawn": "^6.0.5",
     "debug": "^3.1.0",
     "doctrine": "^2.1.0",
+    "eslint-plugin-babel": "^4.1.0",
+    "eslint-plugin-react": "^6.10.0",
+    "eslint-plugin-react-native": "^2.2.1",
     "eslint-scope": "^4.0.0-rc.0",
     "eslint-visitor-keys": "^1.0.0",
     "espree": "^4.0.0-rc.0",
     "esquery": "^1.0.1",
-    "eslint-plugin-babel": "^4.1.0",
-    "eslint-plugin-react": "^6.10.0",
-    "eslint-plugin-react-native": "^2.2.1",
     "esutils": "^2.0.2",
     "file-entry-cache": "^2.0.0",
     "functional-red-black-tree": "^1.0.1",
@@ -79,6 +79,9 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
     "beefy": "^2.1.8",
