--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "dateformat": "^3.0.3",
     "ejs": "^2.6.1",
     "eslint-plugin-eslint-plugin": "^1.2.0",
+    "eslint-plugin-flowtype": "^2.49.3",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-rulesdir": "^0.1.0",
     "eslint-release": "^0.11.1",
