--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "ajv": "^6.5.0",
     "babel-code-frame": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "chalk": "^2.1.0",
     "cross-spawn": "^6.0.5",
     "debug": "^3.1.0",
