--- a/package.json
+++ b/package.json
@@ -21,17 +21,8 @@
     "docs": "node Makefile.js docs",
     "gensite": "node Makefile.js gensite",
     "webpack": "node Makefile.js webpack",
-    "perf": "node Makefile.js perf"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ],
-    "*.md": "markdownlint"
+    "perf": "node Makefile.js perf",
+    "postinstall": "patch-package"
   },
   "files": [
     "LICENSE",
@@ -48,10 +39,14 @@
   "dependencies": {
     "@babel/code-frame": "^7.0.0",
     "ajv": "^6.10.0",
+    "babel-eslint": "^10.1.0",
     "chalk": "^3.0.0",
     "cross-spawn": "^7.0.1",
     "debug": "^4.0.1",
     "doctrine": "^3.0.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-native": "^3.8.1",
     "eslint-scope": "^5.0.0",
     "eslint-utils": "^1.4.3",
     "eslint-visitor-keys": "^1.1.0",
@@ -97,6 +92,7 @@
     "eslint": "file:.",
     "eslint-config-eslint": "file:packages/eslint-config-eslint",
     "eslint-plugin-eslint-plugin": "^2.2.1",
+    "eslint-plugin-flowtype": "^4.6.0",
     "eslint-plugin-internal-rules": "file:tools/internal-rules",
     "eslint-plugin-jsdoc": "^15.9.5",
     "eslint-plugin-node": "^9.0.0",
@@ -111,15 +107,14 @@
     "karma-mocha-reporter": "^2.2.3",
     "karma-webpack": "^4.0.0-rc.6",
     "leche": "^2.2.3",
-    "lint-staged": "^8.1.5",
     "load-perf": "^0.2.0",
     "markdownlint": "^0.15.0",
     "markdownlint-cli": "^0.17.0",
-    "memfs": "^3.0.1",
     "mocha": "^6.1.2",
     "mocha-junit-reporter": "^1.23.0",
     "npm-license": "^0.3.3",
     "nyc": "^14.1.1",
+    "patch-package": "^6.2.1",
     "proxyquire": "^2.0.1",
     "puppeteer": "^1.18.0",
     "recast": "^0.18.1",
