--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "docs": "node Makefile.js docs",
     "gensite": "node Makefile.js gensite",
     "webpack": "node Makefile.js webpack",
-    "perf": "node Makefile.js perf"
+    "perf": "node Makefile.js perf",
+    "postinstall": "patch-package"
   },
   "files": [
     "LICENSE",
@@ -43,6 +44,8 @@
     "debug": "^4.0.1",
     "doctrine": "^3.0.0",
     "enquirer": "^2.3.5",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-native": "^3.9.0",
     "eslint-scope": "^5.1.0",
     "eslint-utils": "^2.1.0",
     "eslint-visitor-keys": "^1.3.0",
@@ -64,6 +67,7 @@
     "minimatch": "^3.0.4",
     "natural-compare": "^1.4.0",
     "optionator": "^0.9.1",
+    "patch-package": "^6.2.2",
     "progress": "^2.0.0",
     "regexpp": "^3.1.0",
     "semver": "^7.2.1",
@@ -88,6 +92,7 @@
     "eslint": "file:.",
     "eslint-config-eslint": "file:packages/eslint-config-eslint",
     "eslint-plugin-eslint-plugin": "^2.2.1",
+    "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-internal-rules": "file:tools/internal-rules",
     "eslint-plugin-jsdoc": "^22.1.0",
     "eslint-plugin-node": "^11.1.0",
