--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "debug": "^4.0.1",
     "doctrine": "^3.0.0",
     "enquirer": "^2.3.5",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-native": "^3.9.0",
     "eslint-scope": "^5.1.0",
