--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "bugs": "https://github.com/eslint/eslint/issues/",
   "dependencies": {
     "@babel/code-frame": "^7.0.0",
+    "@babel/eslint-plugin": "^7.11.3",
     "ajv": "^6.10.0",
     "babel-eslint": "^10.1.0",
     "chalk": "^4.0.0",
@@ -45,7 +46,6 @@
     "debug": "^4.0.1",
     "doctrine": "^3.0.0",
     "enquirer": "^2.3.5",
-    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-native": "^3.9.0",
     "eslint-scope": "^5.1.0",
